# stock_fetcher

./: README.md  pyproject.toml
src/stock_fetcher/: pick.py
