[project]
name = "stock_fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "AaronKC_Wu", email = "aaronkc_wu@moxa.com"},
]
dependencies = [
    "playwright>=1.44.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
