[project]
name = "stock_fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "AaronKC_Wu", email = "aaronkc_wu@moxa.com"},
]
dependencies = [
    "playwright>=1.44.0",
    "requests>=2.31.0",
    "bs4>=0.0.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

